Feature: Create and get game.
